--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "webpack-dev-server": "^4.13.3"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.0",
     "@types/react": "^18.0.38",
-    "babel-core": "^6.26.3",
+    "babel-core": "^4.7.16",
     "babel-loader": "^9.1.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-webpack-plugin": "^0.1.2",
+    "css-loader": "^6.7.3",
+    "style-loader": "^3.3.2",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4"
   }
